fix height 1px, app position absolute, z-index 9999 remove unnescessary

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -8,3 +8,8 @@ button,
 textarea {
     margin: 0.5em;
 }
+
+#app {
+    z-index: 9999;
+    position: absolute;
+}
